[lworld] Shenandoah build broken since 8222989

XMLWordPrintable

                       from /oracle/valhallaL/open/src/hotspot/share/gc/epsilon/epsilonBarrierSet.hpp:27,
                       from /oracle/valhallaL/open/src/hotspot/share/gc/shared/barrierSetConfig.inline.hpp:34,
                       from /oracle/valhallaL/open/src/hotspot/share/oops/access.inline.hpp:29,
                       from /oracle/valhallaL/open/src/hotspot/share/oops/oop.inline.hpp:29,
                       from /oracle/valhallaL/open/src/hotspot/share/oops/valueArrayOop.hpp:30,
                       from /oracle/valhallaL/open/src/hotspot/share/ci/ciArray.hpp:34,
                       from /oracle/valhallaL/open/src/hotspot/share/ci/compilerInterface.hpp:28,
                       from /oracle/valhallaL/open/src/hotspot/share/opto/compile.hpp:29,
                       from /oracle/valhallaL/open/src/hotspot/share/opto/node.hpp:29,
                       from /oracle/valhallaL/open/src/hotspot/share/opto/connode.hpp:28,
                       from /oracle/valhallaL/open/src/hotspot/share/opto/callnode.hpp:28,
                       from /oracle/valhallaL/open/src/hotspot/share/opto/machnode.hpp:28,
                       from ad_x86.hpp:33,
                       from ad_x86.cpp:29:
      /oracle/valhallaL/open/src/hotspot/cpu/x86/gc/shared/barrierSetAssembler_x86.hpp:49:16: error: 'virtual void BarrierSetAssembler::store_at(MacroAssembler*, DecoratorSet, BasicType, Address, Register, Register, Register, Register)' was hidden [-Werror=overloaded-virtual]
         virtual void store_at(MacroAssembler* masm, DecoratorSet decorators, BasicType type,
                      ^
      In file included from /oracle/valhallaL/open/src/hotspot/share/gc/shenandoah/shenandoahBarrierSetAssembler.hpp:30:0,
                       from /oracle/valhallaL/open/src/hotspot/cpu/x86/gc/shenandoah/shenandoah_x86_64.ad:25,
                       from ad_x86.cpp:29:
      /oracle/valhallaL/open/src/hotspot/cpu/x86/gc/shenandoah/shenandoahBarrierSetAssembler_x86.hpp:91:16: error: by 'virtual void ShenandoahBarrierSetAssembler::store_at(MacroAssembler*, DecoratorSet, BasicType, Address, Register, Register, Register)' [-Werror=overloaded-virtual]
         virtual void store_at(MacroAssembler* masm, DecoratorSet decorators, BasicType type,
                      ^
      In file included from /oracle/valhallaL/open/src/hotspot/share/gc/shared/barrierSetAssembler.hpp:30:0,
                       from /oracle/valhallaL/open/src/hotspot/share/gc/epsilon/epsilonBarrierSet.hpp:27,
                       from /oracle/valhallaL/open/src/hotspot/share/gc/shared/barrierSetConfig.inline.hpp:34,
                       from /oracle/valhallaL/open/src/hotspot/share/oops/access.inline.hpp:29,
                       from /oracle/valhallaL/open/src/hotspot/share/oops/oop.inline.hpp:29,
                       from /oracle/valhallaL/open/src/hotspot/share/oops/valueArrayOop.hpp:30,
                       from /oracle/valhallaL/open/src/hotspot/share/ci/ciArray.hpp:34,
                       from /oracle/valhallaL/open/src/hotspot/share/ci/compilerInterface.hpp:28,
                       from /oracle/valhallaL/open/src/hotspot/share/opto/compile.hpp:29,
                       from /oracle/valhallaL/open/src/hotspot/share/opto/node.hpp:29,
                       from /oracle/valhallaL/open/src/hotspot/share/opto/connode.hpp:28,
                       from /oracle/valhallaL/open/src/hotspot/share/opto/callnode.hpp:28,
                       from /oracle/valhallaL/open/src/hotspot/share/opto/machnode.hpp:28,
                       from ad_x86.hpp:33,
                       from ad_x86_clone.cpp:28:
      /oracle/valhallaL/open/src/hotspot/cpu/x86/gc/shared/barrierSetAssembler_x86.hpp:49:16: error: 'virtual void BarrierSetAssembler::store_at(MacroAssembler*, DecoratorSet, BasicType, Address, Register, Register, Register, Register)' was hidden [-Werror=overloaded-virtual]
         virtual void store_at(MacroAssembler* masm, DecoratorSet decorators, BasicType type,
                      ^
      In file included from /oracle/valhallaL/open/src/hotspot/share/gc/shenandoah/shenandoahBarrierSetAssembler.hpp:30:0,
                       from /oracle/valhallaL/open/src/hotspot/cpu/x86/gc/shenandoah/shenandoah_x86_64.ad:25,
                       from ad_x86_clone.cpp:28:
      /oracle/valhallaL/open/src/hotspot/cpu/x86/gc/shenandoah/shenandoahBarrierSetAssembler_x86.hpp:91:16: error: by 'virtual void ShenandoahBarrierSetAssembler::store_at(MacroAssembler*, DecoratorSet, BasicType, Address, Register, Register, Register)' [-Werror=overloaded-virtual]
         virtual void store_at(MacroAssembler* masm, DecoratorSet decorators, BasicType type,
                      ^
      In file included from /oracle/valhallaL/open/src/hotspot/share/gc/shared/barrierSetAssembler.hpp:30:0,
                       from /oracle/valhallaL/open/src/hotspot/share/gc/epsilon/epsilonBarrierSet.hpp:27,
                       from /oracle/valhallaL/open/src/hotspot/share/gc/shared/barrierSetConfig.inline.hpp:34,
                       from /oracle/valhallaL/open/src/hotspot/share/oops/access.inline.hpp:29,
                       from /oracle/valhallaL/open/src/hotspot/share/oops/oop.inline.hpp:29,
                       from /oracle/valhallaL/open/src/hotspot/share/oops/valueArrayOop.hpp:30,
                       from /oracle/valhallaL/open/src/hotspot/share/ci/ciArray.hpp:34,
                       from /oracle/valhallaL/open/src/hotspot/share/ci/compilerInterface.hpp:28,
                       from /oracle/valhallaL/open/src/hotspot/share/opto/compile.hpp:29,
                       from /oracle/valhallaL/open/src/hotspot/share/opto/node.hpp:29,
                       from /oracle/valhallaL/open/src/hotspot/share/opto/connode.hpp:28,
                       from /oracle/valhallaL/open/src/hotspot/share/opto/callnode.hpp:28,
                       from /oracle/valhallaL/open/src/hotspot/share/opto/machnode.hpp:28,
                       from ad_x86.hpp:33,
                       from ad_x86_expand.cpp:28:
      /oracle/valhallaL/open/src/hotspot/cpu/x86/gc/shared/barrierSetAssembler_x86.hpp:49:16: error: 'virtual void BarrierSetAssembler::store_at(MacroAssembler*, DecoratorSet, BasicType, Address, Register, Register, Register, Register)' was hidden [-Werror=overloaded-virtual]
         virtual void store_at(MacroAssembler* masm, DecoratorSet decorators, BasicType type,
                      ^
      In file included from /oracle/valhallaL/open/src/hotspot/share/gc/shenandoah/shenandoahBarrierSetAssembler.hpp:30:0,
                       from /oracle/valhallaL/open/src/hotspot/cpu/x86/gc/shenandoah/shenandoah_x86_64.ad:25,
                       from ad_x86_expand.cpp:28:
      /oracle/valhallaL/open/src/hotspot/cpu/x86/gc/shenandoah/shenandoahBarrierSetAssembler_x86.hpp:91:16: error: by 'virtual void ShenandoahBarrierSetAssembler::store_at(MacroAssembler*, DecoratorSet, BasicType, Address, Register, Register, Register)' [-Werror=overloaded-virtual]
         virtual void store_at(MacroAssembler* masm, DecoratorSet decorators, BasicType type,
                      ^
      In file included from /oracle/valhallaL/open/src/hotspot/share/gc/shared/barrierSetAssembler.hpp:30:0,
                       from /oracle/valhallaL/open/src/hotspot/share/gc/epsilon/epsilonBarrierSet.hpp:27,
                       from /oracle/valhallaL/open/src/hotspot/share/gc/shared/barrierSetConfig.inline.hpp:34,
                       from /oracle/valhallaL/open/src/hotspot/share/oops/access.inline.hpp:29,
                       from /oracle/valhallaL/open/src/hotspot/share/oops/oop.inline.hpp:29,
                       from /oracle/valhallaL/open/src/hotspot/share/oops/valueArrayOop.hpp:30,
                       from /oracle/valhallaL/open/src/hotspot/share/ci/ciArray.hpp:34,
                       from /oracle/valhallaL/open/src/hotspot/share/ci/compilerInterface.hpp:28,
                       from /oracle/valhallaL/open/src/hotspot/share/opto/compile.hpp:29,
                       from /oracle/valhallaL/open/src/hotspot/share/opto/node.hpp:29,
                       from /oracle/valhallaL/open/src/hotspot/share/opto/connode.hpp:28,
                       from /oracle/valhallaL/open/src/hotspot/share/opto/callnode.hpp:28,
                       from /oracle/valhallaL/open/src/hotspot/share/opto/machnode.hpp:28,
                       from ad_x86.hpp:33,
                       from ad_x86_format.cpp:28:
      /oracle/valhallaL/open/src/hotspot/cpu/x86/gc/shared/barrierSetAssembler_x86.hpp:49:16: error: 'virtual void BarrierSetAssembler::store_at(MacroAssembler*, DecoratorSet, BasicType, Address, Register, Register, Register, Register)' was hidden [-Werror=overloaded-virtual]
         virtual void store_at(MacroAssembler* masm, DecoratorSet decorators, BasicType type,
                      ^
      In file included from /oracle/valhallaL/open/src/hotspot/share/gc/shenandoah/shenandoahBarrierSetAssembler.hpp:30:0,
                       from /oracle/valhallaL/open/src/hotspot/cpu/x86/gc/shenandoah/shenandoah_x86_64.ad:25,
                       from ad_x86_format.cpp:28:
      /oracle/valhallaL/open/src/hotspot/cpu/x86/gc/shenandoah/shenandoahBarrierSetAssembler_x86.hpp:91:16: error: by 'virtual void ShenandoahBarrierSetAssembler::store_at(MacroAssembler*, DecoratorSet, BasicType, Address, Register, Register, Register)' [-Werror=overloaded-virtual]
         virtual void store_at(MacroAssembler* masm, DecoratorSet decorators, BasicType type,
                      ^
      In file included from /oracle/valhallaL/open/src/hotspot/share/gc/shared/barrierSetAssembler.hpp:30:0,
                       from /oracle/valhallaL/open/src/hotspot/share/gc/epsilon/epsilonBarrierSet.hpp:27,
                       from /oracle/valhallaL/open/src/hotspot/share/gc/shared/barrierSetConfig.inline.hpp:34,
                       from /oracle/valhallaL/open/src/hotspot/share/oops/access.inline.hpp:29,
                       from /oracle/valhallaL/open/src/hotspot/share/oops/oop.inline.hpp:29,
                       from /oracle/valhallaL/open/src/hotspot/share/oops/valueArrayOop.hpp:30,
                       from /oracle/valhallaL/open/src/hotspot/share/ci/ciArray.hpp:34,
                       from /oracle/valhallaL/open/src/hotspot/share/ci/compilerInterface.hpp:28,
                       from /oracle/valhallaL/open/src/hotspot/share/opto/compile.hpp:29,
                       from /oracle/valhallaL/open/src/hotspot/share/opto/node.hpp:29,
                       from /oracle/valhallaL/open/src/hotspot/share/opto/connode.hpp:28,
                       from /oracle/valhallaL/open/src/hotspot/share/opto/callnode.hpp:28,
                       from /oracle/valhallaL/open/src/hotspot/share/opto/machnode.hpp:28,
                       from ad_x86.hpp:33,
                       from ad_x86_gen.cpp:28:
      /oracle/valhallaL/open/src/hotspot/cpu/x86/gc/shared/barrierSetAssembler_x86.hpp:49:16: error: 'virtual void BarrierSetAssembler::store_at(MacroAssembler*, DecoratorSet, BasicType, Address, Register, Register, Register, Register)' was hidden [-Werror=overloaded-virtual]
         virtual void store_at(MacroAssembler* masm, DecoratorSet decorators, BasicType type,
                      ^
      In file included from /oracle/valhallaL/open/src/hotspot/share/gc/shenandoah/shenandoahBarrierSetAssembler.hpp:30:0,
                       from /oracle/valhallaL/open/src/hotspot/cpu/x86/gc/shenandoah/shenandoah_x86_64.ad:25,
                       from ad_x86_gen.cpp:28:
      /oracle/valhallaL/open/src/hotspot/cpu/x86/gc/shenandoah/shenandoahBarrierSetAssembler_x86.hpp:91:16: error: by 'virtual void ShenandoahBarrierSetAssembler::store_at(MacroAssembler*, DecoratorSet, BasicType, Address, Register, Register, Register)' [-Werror=overloaded-virtual]
         virtual void store_at(MacroAssembler* masm, DecoratorSet decorators, BasicType type,
                      ^

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: