8223390: [lworld] Shenandoah build broken since 8222989